--- a/ToYoDo/WebContent/CSS/layout.css
+++ b/ToYoDo/WebContent/CSS/layout.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
+
 #header {
 	width: 100%;
 	text-align: center;
@@ -8,66 +10,33 @@
 	width: 15%;
 	float: left;
 	overflow: auto;
-	background-color: #f2f2f2;
+	color: #000000;
+	font-family: 'Nunito';
+	padding-top: 2%;
+	height: 100%;
+	margin-top: 59.2px;
+	background-color: rgba(58,59,69,.15);
+	position: fixed;
 }
 
 #main {
 	width: 85%;
-	float: left;
+	float: right;
 	background-color: #ffffff;
+	box-shadow: 0 0 1.75rem 0 rgba(58,59,69,.15);
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-bottom: 10%;
+	padding-top: 3%;
+	height: 100%;
+	margin-top: 59.2px;
+	margin-left: 15%;
 }
 
 #footer {
 	width: 100%;
 	clear: both;
 	text-align: center;
-	background-color: #fffcec;
+	background-color: #f8f9fa;
+	font-family: 'Nunito';
 }
-
- #details {
- 	font-family: "Open Sans", sans-serif;
- 	font-weight: 300;
- 	line-height: 1.42em;
- 	color: #1976d2;
- 	background-color: #efebe9;
- }
-
- .container th h1 {
- 	font-weight: bold;
- 	font-size: 1em;
- 	text-align: left;
- 	color: #185875;
- }
-
- .container td {
- 	font-weight: normal;
- 	font-size: 1em;
- 	-webkit-box-shadow: 0 2px 2px -2px #0e1119;
- 	-moz-box-shadow: 0 2px 2px -2px #0e1119;
- 	box-shadow: 0 2px 2px -2px #0e1119;
- }
-
- .container {
- 	text-align: left;
- 	overflow: hidden;
- 	width: 80%;
- 	margin: 0 auto;
- 	display: table;
- 	padding: 0 0 8em 0;
- }
-
- .container td, .container th {
- 	padding-bottom: 2%;
- 	padding-top: 2%;
- 	padding-left: 2%;
- }
-
- /* Background-color of the odd rows */
- .container tr:nth-child(odd) {
- 	background-color: #e0e0e0;
- }
-
- /* Background-color of the even rows */
- .container tr:nth-child(even) {
- 	background-color: #bdbdbd;
- }
